--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prettier": "2.2.1",
     "reflect-metadata": "0.1.13",
     "ts-node": "9.1.1",
+    "type-fest": "^0.20.2",
     "typescript": "4.1.3"
   },
   "peerDependencies": {
